# Poker-Query-Language

./: .gitignore  .justfile  .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs  justfile  rust-toolchain.toml
fn_macro/: Cargo.toml  fn_macro.rs
open-pql/: Cargo.toml  README.md  build.rs
open-pql-macro/: Cargo.toml  README.md  fn_macro.rs
open-pql-wasm/: Cargo.toml  README.md  index.html
open-pql-wasm/src/: main.rs
open-pql/src/: constants.rs  lib.rs  main.rs
open-pql/src/base/: board.rs  card.rs  card64.rs  card_idx.rs  card_iter.rs  hand_iter.rs  hand_n.rs  isomorphic.rs  mod.rs  rank.rs  rank16.rs  rank16_iter.rs  rank_idx.rs  suit.rs  suit4.rs  suit_idx.rs  suit_mapping.rs
open-pql/src/concurrency/: mod.rs  run_native.rs  run_wasm.rs
open-pql/src/error/: mod.rs
open-pql/src/functions/: best_hi_rating.rs  board_in_range.rs  board_ranks.rs  board_suit_count.rs  duplicated_board_ranks.rs  duplicated_hand_ranks.rs  equity.rs  exact_flop_hand_category.rs  five_card_hi_hand_number.rs  flop_hand_category.rs  flushing_board.rs  hand_ranks.rs  has_second_board_rank.rs  has_top_board_rank.rs  max_rank.rs  min_flop_hand_category.rs  min_hand_type.rs  min_hi_rating.rs  min_rank.rs  mod.rs  monotone_board.rs  nonintersecting_hand_ranks.rs  nth_rank.rs  nut_hi.rs  nut_hi_for_hand_type.rs  outs_info.rs  outs_to_hand_type.rs  overpair.rs  pocket_pair.rs  rainbow_board.rs  rate_hi_hand.rs  river_card.rs  straight_board.rs  ties_hi.rs  turn_card.rs  wins_hi.rs
open-pql/src/helper/: mm256.rs  mod.rs
open-pql/src/pql_parser/: mod.rs
open-pql/src/pql_type/: hand_rating_view.rs  hand_type_ordering.rs  mod.rs  pql_dead_cards.rs  pql_double.rs  pql_equity.rs  pql_flop_hand_category.rs  pql_fraction.rs  pql_game.rs  pql_hand_ranking.rs  pql_hand_type.rs  pql_long.rs  pql_player_count.rs  pql_rank_set.rs  pql_street.rs  pql_string.rs  pql_suit_set.rs  rating_memory_layout.rs
open-pql/src/prim/: mod.rs
open-pql/src/range_checker/: checker.rs  constrain.rs  constrain_rank.rs  constrain_suit.rs  expr.rs  leaf.rs  mod.rs
open-pql/src/range_parser/: error.rs  mod.rs  range.lalrpop
open-pql/src/runner/: init_board.rs  init_game.rs  init_players.rs  mod.rs
open-pql/src/vm/: bin_op.rs  buffer.rs  instruction.rs  mod.rs  push_expr.rs  push_fncall.rs  push_ident.rs  push_num.rs  push_selector.rs  push_str.rs  rng.rs  stack_value.rs  stack_value_num.rs  store.rs  store_var_idx.rs  value.rs
open-pql/tests/: common.rs  test_assert.rs  test_error.rs  test_fn_board.rs  test_fn_flop.rs  test_fn_flush.rs  test_fn_outs.rs  test_fn_range.rs  test_fn_rank.rs  test_fn_win.rs
openpql-core/: Cargo.toml  README.md
openpql-core/src/: lib.rs  util.rs
openpql-core/src/functions/: mod.rs
openpql-core/src/types/: mod.rs  pql_board.rs  pql_card.rs  pql_card_count.rs  pql_cardset.rs  pql_double.rs  pql_equity.rs  pql_flop_hand_category.rs  pql_fraction.rs  pql_game.rs  pql_handtype.rs  pql_hi_rating.rs  pql_lo_rating.rs  pql_player.rs  pql_player_count.rs  pql_rank.rs  pql_rankset.rs  pql_street.rs  pql_suit.rs  pql_suitset.rs
openpql-macro/: Cargo.toml  README.md  codegen.rs  fn_macro.rs  meta_arg.rs  meta_attr.rs  meta_fn.rs  meta_rtn.rs  state.rs
openpql-pql-parser/: Cargo.toml  README.md  build.rs
openpql-pql-parser/src/: error.rs  lib.rs  pql.lalrpop  spanned.rs
openpql-pql-parser/src/ast/: bin_op.rs  expr.rs  fncall.rs  from_clause.rs  ident.rs  mod.rs  num.rs  selector.rs  selector_kind.rs  stmt.rs  str.rs  unary_op.rs
openpql-prelude/: .gitignore  Cargo.toml  README.md  pyproject.toml  setup.sh
openpql-prelude/benches/: omaha.rs  rating.rs
openpql-prelude/src/: buffer.rs  distinct.rs  error.rs  lib.rs  python.rs
openpql-prelude/src/card/: board.rs  canonical.rs  card.rs  card64.rs  card_idx.rs  card_iter.rs  card_n.rs  flop.rs  hand_iter.rs  hand_n.rs  hand_par_iter.rs  isomorphic.rs  mod.rs  rank.rs  rank16.rs  rank_idx.rs  suit.rs  suit4.rs  suit_idx.rs  suit_mapping.rs  util.rs
openpql-prelude/src/eval/: mod.rs  payoff.rs
openpql-prelude/src/eval_flop/: holdem.rs  mod.rs  omaha.rs
openpql-prelude/src/eval_rating/: holdem.rs  mod.rs  omaha.rs  shortdeck.rs
openpql-prelude/src/game/: game.rs  mod.rs  player.rs  starting_hand.rs  street.rs
openpql-prelude/src/rating/: flop_hand_category.rs  hand_rating.rs  hand_rating_view.rs  hand_type.rs  idx_three_ranks.rs  idx_two_ranks.rs  mod.rs  payoff.rs
openpql-prelude/src/rng/: card_gen.rs  mod.rs
openpql-prelude/src/testing/: card_n.rs  distinct.rs  mod.rs
openpql-prelude/src/tree/: action.rs  annotated_action.rs  annotated_action_kind.rs  error.rs  history.rs  mod.rs  player.rs  street.rs
openpql-prelude/tests/: test_rank.py
openpql-range-parser/: Cargo.toml  README.md  build.rs
openpql-range-parser/benches/: range.rs
openpql-range-parser/src/: error.rs  lib.rs  range.lalrpop
openpql-range-parser/src/ast/: card.rs  expr.rs  list.rs  mod.rs  rank.rs  span.rs  suit.rs  term.rs
openpql-range-parser/src/checker/: checker.rs  constrain.rs  constrain_rank.rs  constrain_suit.rs  expr.rs  leaf.rs  mod.rs  perm_indices.rs  var_condition.rs  var_condition_rank.rs  var_condition_suit.rs
openpql-runner/: Cargo.toml  README.md
openpql-runner/src/: helper_loc.rs  lib.rs  output_aggregator.rs  runner.rs  runner_output.rs  util.rs
openpql-runner/src/cli/: main.rs
openpql-runner/src/error/: internal.rs  kind.rs  mod.rs  pql_error.rs  runtime.rs  vm.rs
openpql-runner/src/functions/: best_hi_rating.rs  board_ranks.rs  board_suit_count.rs  context.rs  duplicated_board_ranks.rs  duplicated_hand_ranks.rs  exact_flop_hand_category.rs  exact_hand_type.rs  flop_hand_category.rs  flushing_board.rs  fractional_river_equity.rs  hand_board_intersections.rs  hand_ranks.rs  hand_type.rs  has_second_board_rank.rs  has_top_board_rank.rs  hi_rating.rs  hvhequity.rs  in_range.rs  intersecting_hand_ranks.rs  max_rank.rs  min_flop_hand_category.rs  min_hand_type.rs  min_hi_rating.rs  min_rank.rs  (+23 more)
openpql-runner/tests/: multi_selector.rs  playground.rs  wasm.rs
opql/: Cargo.toml  README.md
opql/src/: main.rs
(+460 files in other folders)
