[workspace]
resolver = "3"
members = [
  "openpql-pql-parser",
  "openpql-prelude",
  "openpql-range-parser",
  "openpql-runner",
]

[workspace.package]
edition = "2024"
homepage = "https://github.com/solve-poker/Poker-Query-Language"
keywords = ["GTO", "PQL", "holdem", "poker", "shortdeck"]

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
panic = "abort"

[workspace.dependencies]
bitflags = "2.10.0"
clap = { version = "4.5.50", features = ["derive"] }
criterion = "0.7.0"
derive_more = { version = "2", features = ["full"] }
fastrand = "2.3.0"
itertools = "0.14.0"
lalrpop = { version = "0.22.2", features = ["lexer"] }
lalrpop-util = { version = "0.22.2", features = ["lexer"] }
openpql-macro = "0.1.0"
openpql-pql-parser = "0.1.0"
openpql-prelude = "0.1.0"
openpql-range-parser = "0.1.0"
pyo3 = "0.26.0"
quickcheck = { version = "1.0.3", features = [] }
quickcheck_macros = "1.1.0"
rand = "0.9.2"
regex = "1.12.2"
rustc-hash = "2.1.1"
smallvec = "1.15.1"

[workspace.lints.clippy]
absolute_paths = { level = "warn", priority = 10 }
missing_errors_doc = { level = "allow", priority = 10 }
module_name_repetitions = { level = "allow", priority = 10 }
must_use_candidate = { level = "allow", priority = 10 }
needless_range_loop = { level = "allow", priority = 10 }
enum_variant_names = { level = "allow", priority = 10 }
nursery = "warn"
pedantic = "warn"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage,coverage_nightly)',
] }
