[workspace]
resolver = "3"
members = [
  "openpql-pql-parser",
  "openpql-prelude",
  "openpql-range-parser",
  "openpql-runner",
]

[workspace.package]
edition = "2024"
homepage = "https://github.com/solve-poker/Poker-Query-Language"
keywords = ["GTO", "PQL", "holdem", "poker", "shortdeck"]

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
panic = "abort"

[workspace.dependencies]
approx = "0.5.1"
bitflags = "2.11.0"
clap = { version = "4.6.0", features = ["derive"] }
criterion = "0.7.0"
derive_more = { version = "2", features = ["full"] }
fastrand = "2.3.0"
itertools = "0.14.0"
lalrpop = { version = "0.22.2", features = ["lexer"] }
lalrpop-util = { version = "0.22.2", features = ["lexer"] }
openpql-macro = { path = "openpql-macro" }
openpql-pql-parser = { path = "openpql-pql-parser" }
openpql-prelude = { path = "openpql-prelude" }
openpql-range-parser = { path = "openpql-range-parser" }
quickcheck = { version = "1.1.0", features = [] }
quickcheck_macros = "1.2.0"
rand = "0.10.0"
rayon = "1.11.0"
regex = "1.12.3"
rustc-hash = "2.1.2"
serde = "1.0.228"
serde_test = "1.0.177"
smallvec = "1.15.1"
speedy = "0.8.7"

[workspace.lints.clippy]
absolute_paths = { level = "warn", priority = 10 }
missing_errors_doc = { level = "allow", priority = 10 }
module_name_repetitions = { level = "allow", priority = 10 }
must_use_candidate = { level = "allow", priority = 10 }
needless_range_loop = { level = "allow", priority = 10 }
enum_variant_names = { level = "allow", priority = 10 }
nursery = "warn"
pedantic = "warn"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage,coverage_nightly)',
] }
