[workspace]
resolver = "3"
members = [
  "openpql-core",
  "openpql-macro",
  "openpql-pql-parser",
  "openpql-prelude",
  "openpql-range-parser",
  "openpql-runner",
]

[workspace.package]
edition = "2024"
homepage = "https://github.com/solve-poker/Poker-Query-Language"
keywords = ["GTO", "PQL", "holdem", "poker", "shortdeck"]
license = "MIT"
repository = "https://github.com/solve-poker/Poker-Query-Language"
version = "0.2.0"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
panic = "abort"

[workspace.dependencies]
approx = "0.5.1"
bitflags = "2.12.1"
clap = { version = "4.6.1", features = ["derive"] }
criterion = "0.8.2"
derive_more = { version = "2", features = ["full"] }
fastrand = "2.4.1"
itertools = "0.14.0"
lalrpop = { version = "0.23.1", features = ["lexer"] }
lalrpop-util = { version = "0.23.1", features = ["lexer"] }
openpql-core = { path = "openpql-core", version = "0.2.0" }
openpql-macro = { path = "openpql-macro", version = "0.2.0" }
openpql-pql-parser = { path = "openpql-pql-parser", version = "0.2.0" }
openpql-prelude = { path = "openpql-prelude", version = "0.2.0" }
openpql-range-parser = { path = "openpql-range-parser", version = "0.2.0" }
quickcheck = { version = "1.1.0", features = [] }
quickcheck_macros = "1.2.0"
rand = "0.10.1"
rayon = "1.12.0"
regex = "1.12.3"
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_test = "1.0.177"
smallvec = "1.15.1"
speedy = "0.8.7"

[workspace.lints.clippy]
absolute_paths = { level = "warn", priority = 10 }
enum_variant_names = { level = "allow", priority = 10 }
missing_errors_doc = { level = "allow", priority = 10 }
module_inception = "allow"
module_name_repetitions = { level = "allow", priority = 10 }
must_use_candidate = { level = "allow", priority = 10 }
needless_range_loop = { level = "allow", priority = 10 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage,coverage_nightly)',
] }
