[package]
name = "fn_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
path = "fn_macro.rs"

[dependencies]
lazy_static = "1.5.0"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.11.1"
syn = { version = "2.0", features = ["full"] }

[profile.dev]
debug = true
opt-level = 0
incremental = true

[profile.release]
debug = false
opt-level = 3
lto = "fat"
