[package]
description = "Internal crate used by open_pql"
edition = "2021"
homepage.workspace = true
license = "MIT"
name = "open_pql_macro"
version = "0.0.3"

[lib]
proc-macro = true
path = "fn_macro.rs"

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
regex.workspace = true
syn.workspace = true
