[package]
name = "open-pql-wasm"
version = "0.1.0"
edition.workspace = true

[dependencies]
console_error_panic_hook = "0.1.7"
open-pql.workspace = true
web-sys = { version = "0.3.77", features = [
  "Window",
  "Document",
  "HtmlElement",
  "Text",
  "HtmlTextAreaElement",
] }
yew = { version = "0.21.0", features = ["csr"] }

[lints]
workspace = true
