[package]
description = "Poker Query Language"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license = "MIT"
name = "open-pql"
repository = "https://github.com/solve-poker/open-pql"
version = "0.0.3"

[lib]
name = "open_pql"
path = "src/lib.rs"

[build-dependencies]
derive_more.workspace = true
itertools.workspace = true
lalrpop.workspace = true
rustc-hash.workspace = true
speedy.workspace = true

[dependencies]
derive_more.workspace = true
fastrand.workspace = true
itertools.workspace = true
lalrpop-util.workspace = true
open_pql_macro.workspace = true
regex.workspace = true
rustc-hash.workspace = true
speedy.workspace = true
tailcall.workspace = true

[dev-dependencies]
quickcheck.workspace = true
quickcheck_macros.workspace = true

[features]
benchmark = []
x86 = []

[lints]
workspace = true
