[package]
description = "Core types and primitives for Poker Query Language (PQL)"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "openpql-core"
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
derive_more = { workspace = true, features = ["display", "std"] }
openpql-prelude = { workspace = true }

[dev-dependencies]
approx.workspace = true
quickcheck.workspace = true
quickcheck_macros.workspace = true
openpql-prelude = { workspace = true, features = ["quickcheck"] }

[lib]
doctest = false
