[package]
description = "Internal crate used by Poker-Query-Language"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license = "MIT"
name = "openpql-macro"
repository = "https://github.com/solve-poker/Poker-Query-Language"
version = "0.1.0"

[lib]
proc-macro = true
path = "fn_macro.rs"
doctest = false

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[lints]
workspace = true
