[package]
description = "Internal crate used by Poker-Query-Language"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "openpql-macro"
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true
path = "fn_macro.rs"
doctest = false

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[lints]
workspace = true
