[package]
name = "openpql-pql-parser"
description = "PQL Parser"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
derive_more = { workspace = true, features = ['display'] }
lalrpop-util.workspace = true
rustc-hash.workspace = true

[build-dependencies]
lalrpop.workspace = true

[lints]
workspace = true
