[package]
description = "A parser implementation for Poker Query Language (PQL)"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "openpql-pql-parser"
repository.workspace = true
version.workspace = true

[dependencies]
derive_more = { workspace = true, features = ['display'] }
lalrpop-util.workspace = true
rustc-hash.workspace = true

[build-dependencies]
lalrpop.workspace = true

[lints]
workspace = true

[lib]
doctest = false
