[package]
description = "Basic library for card handling and evaluation of Hold'em Short Deck poker."
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "openpql-prelude"
repository.workspace = true
version.workspace = true

[lib]
name = "openpql_prelude"
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
derive_more = { workspace = true, features = [
  "index",
  "into_iterator",
  "from",
  "into",
  "display",
  "std",
  "add",
  "add_assign",
] }
fastrand = { workspace = true, optional = true }
quickcheck = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
rustc-hash = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
speedy = { workspace = true, optional = true }

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
fastrand.workspace = true
itertools.workspace = true
quickcheck.workspace = true
quickcheck_macros.workspace = true
regex.workspace = true
rustc-hash.workspace = true
serde_test.workspace = true

[features]
default = ["rand"]
quickcheck = ["dep:quickcheck", "fastrand", "rustc-hash"]
rand = ["dep:rand"]
rayon = ["dep:rayon"]
serde = ["dep:serde"]
speedy = ["dep:speedy"]
full = ["quickcheck", "rand", "rayon", "serde", "speedy"]

[lints]
workspace = true

[[bench]]
name = "omaha"
harness = false
