[package]
description = "Poker Range Notation Parser"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license = "MIT"
name = "openpql-range-parser"
repository = "https://github.com/solve-poker/Poker-Query-Language"
version = "0.1.0"

[dependencies]
derive_more = { workspace = true, features = ["display"] }
itertools.workspace = true
lalrpop-util.workspace = true
openpql-prelude = { workspace = true }
smallvec.workspace = true

[build-dependencies]
lalrpop.workspace = true

[dev-dependencies]
criterion.workspace = true
quickcheck.workspace = true
quickcheck_macros.workspace = true
openpql-prelude = { workspace = true, features = ["quickcheck"] }

[lints]
workspace = true

[[bench]]
name = "range"
harness = false
