[package]
description = "A high-performance Rust implementation of Poker Query Language (PQL), enabling SQL-like queries for poker analysis and calculations. This project is a spiritual successor to the original Java implementation developed by Odds Oracle."
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "openpql-runner"
repository.workspace = true
version.workspace = true

[lib]
name = "opql"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "opql"
path = "src/cli/main.rs"
required-features = ["cli"]

[[test]]
name = "functions"
path = "tests/functions/main.rs"

[dependencies]
bitflags.workspace = true
clap = { workspace = true, optional = true }
derive_more = { workspace = true, features = ["display", "std"] }
openpql-core.workspace = true
openpql-macro.workspace = true
openpql-pql-parser = { workspace = true }
openpql-prelude = { workspace = true }
openpql-range-parser.workspace = true
rand.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true

# rand needs getrandom's js backend on wasm32-unknown-unknown; enabling it
# here keeps wasm consumers from having to opt in themselves
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = { workspace = true }

[dev-dependencies]
quickcheck.workspace = true
quickcheck_macros.workspace = true
openpql-prelude = { workspace = true, features = ["quickcheck"] }
itertools.workspace = true

[features]
cli = ["clap"]

[lints]
workspace = true
